Avance del Template
He corregido parte del inicio ya que si bien era visible, no sentí que estuviera bien diseñado así que empecé de 0 y avance un poco mas de lo que ya había hecho.

--- a/Proyecto Template parcial 3/Proyecto Template.html
+++ b/Proyecto Template parcial 3/Proyecto Template.html
@@ -15,22 +15,49 @@
 </head>
 
 <body>
-    <div class="motivation">
-        <div class="icon1">
-            <img src="img/Avatar.jpg">
-        </div>
-        <div class="text1">
-        <p>WORKS</p>
-    </div>
-    <div class="text2">
-        <p>ABOUT</p>
-    </div>
-    <div class="text3">
-        <p>LINKS</p>
-    </div>
-    <div class="text4">
-        <p>Contacts</p>
+  <div class="motivation">
+    <div class="icon1">
+      <img src="img/AVATAR.jpg">
     </div>
     </div>
+  <div class="container-barra">
+    <div class="row1">
+        <div class="barra1">
+            <font color="#007FFF"><p>Works</p></font>
+  </div>
+    <div class="barra2">
+        <font color="#007FFF"><p>About</p></font>
+  </div>
+    <div class="barra3">
+        <font color="#007FFF"><p>Links</p></font>
+  </div>
+    <div class="barra4">
+        <font color="#007FFF"><p>Contacts</p></font>
+  </div>
+  </div>
+  </div>
+    <div class="container-titulo">
+       <div class="row2">
+        <div class="titulo">
+            <h1>Motivation Is The First </h1>
+  </div>
+    <div class="titulo0">
+      <h1>Step To <font color="#007FFF">Success</font> </h1>
+  </div>
+  </div>
+  </div>
+    <div class="container-logos">
+      <div class="logosss">
+        <div class="logito1">
+            <img src="img/LOGITO1.jpg" alt="">
+  </div>
+    <div class="logito2">
+        <img src="img/LOGITO2.jpg" alt="">
+  </div>
+    <div class="logito3">
+        <img src="img/LOGITO3.jpg" alt="">
+  </div>
+  </div>   
+  </div>
 </body>
 </html>
