avance del pull request 2
Corregí los errores que el profe me señalo en la clase anterior y avance un poco mas hasta concluir con lo que me correspondía.

--- a/Proyecto Template parcial 3/Proyecto Template.html
+++ b/Proyecto Template parcial 3/Proyecto Template.html
@@ -15,49 +15,83 @@
 </head>
 
 <body>
-  <div class="motivation">
-    <div class="icon1">
-      <img src="img/AVATAR.jpg">
+   <div class="motivation">
+     <div class="icon1">
+       <img src="img/AVATAR.jpg">
+     </div>
+   </div> 
+  <div class="container">
+    <div class="barra">
+    <div class="barra1">
+    <p>Works</p>   
     </div>
-    </div>
-  <div class="container-barra">
-    <div class="row1">
-        <div class="barra1">
-            <font color="#007FFF"><p>Works</p></font>
-  </div>
     <div class="barra2">
-        <font color="#007FFF"><p>About</p></font>
+    <p>About</p>
     </div>
-   <div class="barra3">
-      <font color="#007FFF"><p>Links</p></font>
-  </div>
+    <div class="barra3">
+    <p>Links</p>
+    </div>
     <div class="barra4">
-        <font color="#007FFF"><p>Contacts</p></font>
+    <p>Contacts</p>  
+    </div>
   </div>
 </div>
+<div class="tituloss">
+<div class="tituliyo">
+  <div class="título">
+    <h1>Motivation Is The First</h1>
+  </div>
+<div class="título0">
+<h1>Step To <div class="títulos"><h1>Success</h1></div></h1>
 </div>
- <div class="container-titulo">
-       <div class="row2">
-        <div class="titulo">
-            <h1>Motivation Is The First </h1>
-  </div>
-    <div class="titulo0">
-      <h1>Step To <font color="#007FFF">Success</font> </h1>
-    </div>  
-  </div>
-  </div>
-    <div class="container-logos">
-      <div class="logosss">
-        <div class="logito1">
-            <img src="img/LOGITO1.jpg" alt="">
-  </div>
+</div>
+</div>
+<div class="logos">
+  <div class="logosss">
+    <div class="logito1">
+      <img src="img/LOGITO1.jpg" alt="">
+    </div>
     <div class="logito2">
-        <img src="img/LOGITO2.jpg" alt="">
-  </div>
+      <img src="img/LOGITO2.jpg" alt=""> 
+    </div>
     <div class="logito3">
-        <img src="img/LOGITO3.jpg" alt="">
+      <img src="img/LOGITO3.jpg" alt="">
+    </div>
   </div>
-  </div>   
+</div>
+<div class="imagenes">
+  <div class="imagen1">
+    <img src="IMG/IMAGEN1.jpg" alt="">
+  <div class="barritaamarilla">
+  <button type="button"><strong>Featured</strong></button>
+</div>
+<div class="textos">
+  <div class="texto1">
+    <h2>Motivation Is The</h2> 
   </div>
-</body>
+  <div class="texto2">
+    <h2>First Step To</h2>
+  </div>
+  <div class="texto3">
+    <h2>Sucess</h2>
+  </div>
+</div>
+</div>
+<div class="imagen2">
+  <img src="img/IMAGEN2.jpg" alt="">
+</div>
+</div>
+<div class="imagenes2">
+  <div class="imagen3">
+    <img src="img/IMAGEN3.jpg" alt="">
+  </div>
+ <div class="imagen4">
+  <img src="img/IMAGEN4.jpg" alt="">
+<div class="barritaamarillita2">
+  <button type="button"><strong>Featured</strong></button>
+</div>
+</div>
+</div>
+
+</body> 
 </html>
