--- a/Proyecto Template parcial 3/tercer-parcial/index.html
+++ b/Proyecto Template parcial 3/tercer-parcial/index.html
@@ -321,7 +321,7 @@
     </div>
     <div class="termino">
         <div class="terminooo">
-            <p>Copyright ©️ 2018 Denis Abdullin – deab.ru</p>
+            <p>Copyright © 2018 Denis Abdullin – deab.ru</p>
         </div>
         <div class="termino2">
             <p>Invoicing</p>
